Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13585

RocksDB plugin fails to build on macOS because of unknown type `timer_t` etc.

Details

    Description

      Hello!

      When trying to build the following errors are thrown:

      In file included from /tmp/mariadb-20170818-29127-1j90748/mariadb-10.2.8/storage/rocksdb/event_listener.cc:31:
      In file included from /tmp/mariadb-20170818-29127-1j90748/mariadb-10.2.8/storage/rocksdb/./ha_rocksdb.h:53:
      /tmp/mariadb-20170818-29127-1j90748/mariadb-10.2.8/storage/rocksdb/./rdb_io_watchdog.h:45:3: error: unknown type name 'timer_t'; did you mean 'time_t'?
      [..]
      In file included from /tmp/mariadb-20170818-29127-1j90748/mariadb-10.2.8/storage/rocksdb/event_listener.cc:31:
      In file included from /tmp/mariadb-20170818-29127-1j90748/mariadb-10.2.8/storage/rocksdb/./ha_rocksdb.h:53:
      /tmp/mariadb-20170818-29127-1j90748/mariadb-10.2.8/storage/rocksdb/./rdb_io_watchdog.h:60:13: error: use of undeclared identifier 'timer_delete'
      

      This is probably because Apple's `time.h` doesn't declare `timer_t`, `timer_delete()` and such.

      Thank you.

      Attachments

        Activity

          varun you have an OS X machine, right? Could you check this please?

          psergei Sergei Petrunia added a comment - varun you have an OS X machine, right? Could you check this please?
          varun Varun Gupta (Inactive) added a comment - http://lists.askmonty.org/pipermail/commits/2017-August/011429.html

          Ok to push once the changes are made. Thanks!

          https://lists.launchpad.net/maria-developers/msg10851.html

          cvicentiu Vicențiu Ciorbaru added a comment - Ok to push once the changes are made. Thanks! https://lists.launchpad.net/maria-developers/msg10851.html

          People

            varun Varun Gupta (Inactive)
            Dan Dan
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.