MDEV-13585: RocksDB plugin fails to build on macOS because of unknown type `timer_t` etc.

Rdb_io_watchdog can not be built on  OS X. Disable it.